<resources>
    <string name="app_name">Leg Day</string>
    <!--<string name="Lisays">+</string>-->
    <string name="Testi">Tämä on treeni näkymä</string>
    <string name="title_activity_exercise_list">ExerciseListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="input_exercise_name">Nimeä liike</string>
    <string name="submit_exercise_name">OK</string>
    <string name="default_value">Oletusarvo</string>
    <string name="button_add_exercise">Lisää liike</string>
    <string name="button_finish_workout">Treeni tehty</string>
    <string name="button_confirm_deletion">Kyllä</string>
    <string name="button_cancel_deletion">Ei</string>
    <string name="txt_date">Minä päivänä haluat treenata?</string>
    <string name="txt_time">Mihin aikaan haluat treenata?</string>
    <string name="txt_name">Mitä haluat treenata?</string>
    <string name="button_create_workout">Lisää</string>
</resources>
